Add properties and relations

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
   <!-- Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
   <!-- CSS Reset -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/normalize.css">
   <!-- Milligram CSS minified -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/milligram.min.css">
 </head>
 
 <body>
