--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
   <title>Tonal App</title>
   <!-- Google Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+  <!-- link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic" -->
   <!-- CSS Reset -->
   <link rel="stylesheet" href="%PUBLIC_URL%/normalize.css">
   <!-- Milligram CSS minified -->
